--- a/Conhecimentos Bancários/index.html
+++ b/Conhecimentos Bancários/index.html
@@ -118,58 +118,207 @@
             <!-- AULA 01-->
     
             <h2>Aula 01 - Moeda</h2>
-            <p>Conceito: ativo que pode ser utilizado de forma imediata para realizar transações.</p>
-            <p><strong>Funções:</strong></p>
+            
+            <h3>Moeda: Conceitos Fundamentais</h3>
+
+            <h4>O que é moeda?</h4>
+            <p>Na economia, moeda é todo ativo aceito para realizar transações imediatamente. Ela substitui o escambo e torna as trocas muito mais eficientes.</p>
+
+            <h4>Funções da moeda</h4>
+            <p>A moeda exerce três funções clássicas:</p>
             <ul>
-                <li>Reserva de valor</li>
-                <li>Unidade de conta</li>
-                <li>Meio de troca</li>
-            </ul>
-            <p><strong>Atributos:</strong></p>
-            <ul>
-                <li>Baixo custo de estocagem</li>
-                <li>Baixo custo de transação</li>
-                <li>Difícil de falsificar</li>
-                <li>Alta durabilidade</li>
-                <li>Divisibilidade</li>
-                <li>Transportável</li>
-                <li>Manuseável</li>
-                <li>Homogeneidade</li>
-            </ul>
-            <p><strong>Tipos:</strong></p>
-            <ul>
-                <li>Moeda-mercadoria (sal; conchas; gado; cigarros)</li>
-                <li>Padrão-ouro (trocada por ouro a taxa fixa)</li>
-                <li>Fiduciária (confiança)</li>
-                <li>Escritural (saldo em conta corrente)</li>
-            </ul>
-            <h3>Mercado Monetário</h3>
-            <p><strong>Demanda por Moeda (Motivos)</strong></p>
-            <p>Transação</p>
-            <ul>
-                <li>Para realizar transações comerciais</li>
-                <li>Varia na mesma direção que o nível de renda</li>
-                <li>Função: meio de troca</li>
-            </ul>
-            <p>Precaução</p>
-            <ul>
-                <li>Proteger contra imprevistos</li>
-                <li>Varia na mesma direção que o nível de renda</li>
-                <li>Função: reserva de valor</li>
-            </ul>
-            <p>Especulação</p>
-            <ul>
-                <li>Para aproveitar oportunidades de investimento</li>
-                <li>Se os juros estão baixos, a demanda por moeda é alta</li>
-                <li>Se os juros estão altos, a demanda por moeda é baixa</li>
-                <li>Se há expectativa de aumento dos juros, a demanda é alta</li>
-                <li>Se há expectativa de queda dos juros, a demanda é baixa</li>
+                <li><strong>Meio de troca:</strong> é aceita na compra de qualquer bem ou serviço, elimina o escambo e facilita trocas.</li>
+                <li><strong>Unidade de conta:</strong> permite comparar valores (ex.: uma pizza custa R$30) e viabiliza a precificação (“R$300” em vez de “100 latas de refrigerante”).</li>
+                <li><strong>Reserva de valor:</strong> pode ser guardada para uso futuro, embora a inflação reduza esse poder com o tempo.</li>
             </ul>
 
-            <h3>Multiplicador Monetário</h3>
-            <p>Os bancos comerciais têm a capacidade de aumentar a quantidade de M1 ao aumentar os depósitos à vista. Eles fazem isso emprestando dinheiro.</p>
+            <h4>Atributos desejáveis</h4>
+            <p>Para ser eficiente, a moeda deve ser durável, divisível, homogênea, transportável, difícil de falsificar e de baixo custo de transação e estocagem.</p>
 
-            <h4>Sistema de reservas fracionárias</h4>
+            <h4>Tipos de moeda</h4>
+            <ul>
+                <li><strong>Moeda-mercadoria:</strong> tem valor intrínseco (ex.: sal, ouro; até hoje, cigarros em presídios).</li>
+                <li><strong>Padrão-ouro (lastreada):</strong> conversível em ouro guardado em cofre.</li>
+                <li><strong>Fiduciária:</strong> vale porque o governo determina e as pessoas confiam.</li>
+                <li><strong>Escritural:</strong> depósitos à vista nos bancos (números na conta também são moeda).</li>
+            </ul>
+
+            <h3>Mercado Monetário: Oferta e Demanda de Moeda</h3>
+
+            <h4>Demanda</h4>
+            <p>Por que as pessoas querem moeda:</p>
+            <ul>
+                <li><strong>Transação e precaução:</strong> crescem com a renda; para um dado nível de renda, a demanda pode ser maior quanto maior a velocidade de circulação.</li>
+                <li><strong>Especulação (motivo portfólio/financeiro):</strong> varia inversamente ao juro; juros altos ↓ demanda para especulação, juros baixos ↑ demanda. Relaciona-se ao custo de oportunidade de manter caixa.</li>
+            </ul>
+
+            <h4>Oferta</h4>
+            <p>Como medimos e “partimos” a moeda:</p>
+            <ul>
+                <li><strong>Papel-moeda emitido (PME):</strong> se espalha entre Banco Central (cofres), caixas dos bancos e público. O que nos interessa para transações é o <strong>papel-moeda em poder do público (PMPP)</strong>.</li>
+            </ul>
+
+            <h4>Agregados monetários</h4>
+            <table>
+            <tr><th>Agregado</th><th>O que inclui</th></tr>
+            <tr><td>M1</td><td>PMPP + Depósitos à Vista</td></tr>
+            <tr><td>M2</td><td>M1 + Poupança + Títulos de bancos</td></tr>
+            <tr><td>M3</td><td>M2 + fundos de investimento</td></tr>
+            <tr><td>M4</td><td>M3 + títulos públicos federais de alta liquidez</td></tr>
+            </table>
+
+            <h4>Base monetária</h4>
+            <p>Composta por papel-moeda em circulação + reservas bancárias; também pode ser vista como PMPP + encaixes bancários (reservas + caixa dos bancos). Compulsórios são remunerados; reservas voluntárias podem aparecer além do obrigatório.</p>
+
+            <h4>Criação e destruição de moeda</h4>
+            <p>Só ocorre quando a transação é entre o “público” e o setor bancário (BC + bancos que captam à vista). Ex.: transferir da poupança para a conta corrente cria moeda; aplicar em CDB destrói moeda; operações entre bancos entre si são neutras.</p>
+
+            <h3>Criação de Moeda e o Multiplicador Monetário</h3>
+
+            <h4>Como a moeda é criada?</h4>
+            <ul>
+                <li>Transferência de poupança para conta corrente;</li>
+                <li>Empréstimos concedidos por bancos.</li>
+            </ul>
+
+            <h4>O sistema de reservas fracionárias</h4>
+            <p>Os bancos mantêm apenas uma fração dos depósitos como reserva e emprestam o restante, multiplicando a quantidade de moeda em circulação.</p>
+
+            <h4>O multiplicador monetário</h4>
+            <p>Indica quantas vezes a base monetária gera meios de pagamento (M1).</p>
+            <p>Fórmula:</p>
+            <p><code>m = 1 / (1 - d*(1 - r))</code></p>
+            <ul>
+                <li>d = proporção de M1 que está em depósitos à vista;</li>
+                <li>r = reservas (encaixes) mantidas pelos bancos.</li>
+            </ul>
+            <p>Quanto mais as pessoas depositam e menos os bancos guardam, maior o multiplicador.</p>
+
+            <h3>Política Monetária</h3>
+
+            <h4>Objetivos</h4>
+            <ul>
+                <li><strong>Monetarista:</strong> foco em estabilidade de preços.</li>
+                <li><strong>Keynesiana:</strong> ênfase em emprego e produção.</li>
+            </ul>
+
+            <h4>Quem faz o quê</h4>
+            <ul>
+                <li>CMN define diretrizes e instrumentos;</li>
+                <li>Banco Central executa a política;</li>
+                <li>Copom fixa a Meta da Selic e o BC opera para que a taxa efetiva convirja ao alvo.</li>
+            </ul>
+
+            <h4>Instrumentos tradicionais</h4>
+            <ul>
+                <li>Mercado aberto (compra/venda de títulos): principal forma de ajustar liquidez.</li>
+                <li>Depósitos compulsórios: mudam a fração de reservas, afetando o multiplicador/crédito.</li>
+                <li>Redesconto: empréstimo de última instância aos bancos.</li>
+            </ul>
+
+            <h4>Expansiva x Restritiva</h4>
+            <ul>
+                <li><strong>Expansiva:</strong> compra de títulos pelo BC, redução de redesconto, emissão de moeda, etc.</li>
+                <li><strong>Restritiva:</strong> venda de títulos, aumento de compulsórios, etc.</li>
+            </ul>
+
+            <h4>Objetivo</h4>
+            <p>Regular a quantidade de moeda na economia para:</p>
+            <ul>
+                <li>Controlar a inflação;</li>
+                <li>Estabilizar a economia;</li>
+                <li>Influenciar emprego e renda (visão keynesiana);</li>
+                <li>Manter a estabilidade de preços (visão monetarista).</li>
+            </ul>
+
+            <h4>Quem executa?</h4>
+            <ul>
+                <li>CMN (Conselho Monetário Nacional) define as diretrizes;</li>
+                <li>Banco Central do Brasil executa a política monetária.</li>
+            </ul>
+
+            <h3>Instrumentos de Política Monetária Convencional</h3>
+            <table>
+            <tr><th>Instrumento</th><th>Como funciona</th><th>Expansão</th><th>Contração</th></tr>
+            <tr><td>Redesconto</td><td>Empréstimo do Bacen aos bancos</td><td>↓ taxa</td><td>↑ taxa</td></tr>
+            <tr><td>Compulsórios</td><td>% dos depósitos que os bancos devem recolher ao Bacen</td><td>↓ alíquota</td><td>↑ alíquota</td></tr>
+            <tr><td>Mercado Aberto</td><td>Compra e venda de títulos públicos pelo Bacen</td><td>Compra</td><td>Venda</td></tr>
+            </table>
+
+            <h3>Taxa Selic e Operações Compromissadas</h3>
+            <p>O Sistema Especial de Liquidação e de Custódia registra, compensa e liquida operações com títulos públicos federais; nele se observa a taxa Selic (overnight), referência da política monetária.</p>
+            <p>O BC injeta ou retira liquidez no overnight por operações compromissadas, mantendo a Selic efetiva próxima da Meta Selic definida pelo Copom.</p>
+
+            <h4>Selic: sistema e taxa</h4>
+            <ul>
+                <li>Sistema Selic: registra e liquida operações com títulos públicos.</li>
+                <li>Taxa Selic: juros médios das operações compromissadas (overnight), principal taxa de referência da economia brasileira.</li>
+            </ul>
+
+            <h4>Operações compromissadas</h4>
+            <ul>
+                <li>O Bacen compra títulos com compromisso de revenda;</li>
+                <li>Controla a liquidez de curto prazo e conduz a Selic para a meta.</li>
+            </ul>
+
+            <h3>Regime de Metas de Inflação</h3>
+            <p>Ancorar expectativas para estabilizar preços e o ciclo. O CMN define a meta (IPCA) com banda de tolerância; se o IPCA ficar fora da banda, o Presidente do BC envia carta aberta ao Ministro da Fazenda explicando causas, medidas e horizonte para recondução da inflação à meta.</p>
+            <p>Desde 1999, o Brasil adota este regime:</p>
+            <ul>
+                <li>CMN define a meta do IPCA com banda de tolerância.</li>
+                <li>Copom define a Selic Meta para atingir a meta de inflação.</li>
+                <li>A cada 45 dias, a Selic pode ser ajustada.</li>
+                <li>Se a meta for descumprida, o presidente do Bacen escreve carta aberta ao Ministro da Fazenda explicando o motivo.</li>
+            </ul>
+
+            <h3>Depósitos Remunerados no Banco Central</h3>
+            <p>Autorizados pela Lei 14.185/2021, permitem ao BC receber depósitos voluntários remunerados de instituições financeiras, como alternativa às operações compromissadas. O CMN fixa parâmetros; a remuneração pode ser por leilão competitivo ou taxa pré-estabelecida; não integra compulsório.</p>
+            <ul>
+                <li>Funcionam como alternativa às operações compromissadas;</li>
+                <li>Tornam o sistema mais eficiente e menos custoso;</li>
+                <li>Podem ser usados para contrair ou expandir a liquidez.</li>
+            </ul>
+
+            <h3>Política Monetária Expansionista x Contracionista</h3>
+            <table>
+            <tr><th>Tipo</th><th>Ações típicas</th><th>Objetivo</th></tr>
+            <tr><td>Expansionista</td><td>Comprar títulos, reduzir compulsórios e redesconto, emitir moeda</td><td>Estimular a economia, aumentar a demanda agregada</td></tr>
+            <tr><td>Contracionista</td><td>Vender títulos, elevar compulsórios e redesconto</td><td>Reduzir inflação, conter consumo</td></tr>
+            </table>
+
+            <h3>Taxas e Curva de Juros</h3>
+            <p>Taxa de juros = “preço do dinheiro”. A curva de juros descreve a estrutura a termo (juros por prazo). Sua inclinação reflete expectativas de inflação futura, prêmio de risco e postura da política monetária. Decisões do Copom afetam mais o curto prazo, enquanto expectativas e risco influenciam os prazos longos.</p>
+
+            <h4>Juros nominais x reais</h4>
+            <ul>
+                <li>Nominal: inclui inflação;</li>
+                <li>Real: ganho efetivo, descontando a inflação.</li>
+            </ul>
+            <p>Fórmula: <strong>juros nominais = juros reais + inflação</strong></p>
+
+            <h4>Curva de juros</h4>
+            <ul>
+                <li>Geralmente crescente (juros maiores em prazos longos);</li>
+                <li>A Selic influencia toda a curva;</li>
+                <li>Serve como termômetro das expectativas de inflação e risco.</li>
+            </ul>
+
+            <h3>Políticas Monetárias Não Convencionais (PMNC)</h3>
+            <p>Usadas sobretudo em crises, quando cortar ou elevar Selic não basta:</p>
+            <ul>
+                <li>Orientação futura (forward guidance): BC sinaliza trajetória futura dos juros;</li>
+                <li>Compra de ativos (QE): expansão do balanço do BC comprando títulos;</li>
+                <li>Crédito direto/linhas especiais: BC/governo canalizam crédito a setores/IFs;</li>
+                <li>Swaps cambiais: instrumento para liquidez e estabilidade cambial.</li>
+            </ul>
+
+            <h4>Exemplos em crises</h4>
+            <ul>
+                <li>Sinalização (forward guidance): BC anuncia compromissos futuros, influenciando expectativas;</li>
+                <li>Crédito direto: empréstimos diretos do BC a instituições financeiras ou, via bancos públicos, ao público;</li>
+                <li>Quase-débito (quantitative easing): compra de ativos de longo prazo pelo BC para injetar liquidez;</li>
+                <li>Outros: swaps cambiais e linhas de liquidez para garantir reservas aos bancos.</li>
+            </ul>
 
 
         </section>
