--- a/Conhecimentos Bancários/index.html
+++ b/Conhecimentos Bancários/index.html
@@ -152,6 +152,25 @@
                 <li><strong>Especulação (motivo portfólio/financeiro):</strong> varia inversamente ao juro; juros altos ↓ demanda para especulação, juros baixos ↑ demanda. Relaciona-se ao custo de oportunidade de manter caixa.</li>
             </ul>
 
+            <h4>Emissão e Circulação</h4>
+            <div class="tabelaExplica">
+                <table>
+                    <tbody>
+                        <tr>
+                            <td colspan="3"><strong>Papel-moeda emitido</strong> pelo Banco Central <strong>(PME)</strong></td>
+                        </tr>
+                        <tr>
+                            <td colspan="2"><strong>Papel-moeda em circulação (PMC)</strong></td>
+                            <td>Caixa do Banco Central</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Papel-moeda em poder do público (PMPP)</strong></td>
+                            <td>Caixa dos bancos comerciais</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            
             <h4>Oferta</h4>
             <p>Como medimos e “partimos” a moeda:</p>
             <ul>
@@ -159,16 +178,42 @@
             </ul>
 
             <h4>Agregados monetários</h4>
-            <table>
-            <tr><th>Agregado</th><th>O que inclui</th></tr>
-            <tr><td>M1</td><td>PMPP + Depósitos à Vista</td></tr>
-            <tr><td>M2</td><td>M1 + Poupança + Títulos de bancos</td></tr>
-            <tr><td>M3</td><td>M2 + fundos de investimento</td></tr>
-            <tr><td>M4</td><td>M3 + títulos públicos federais de alta liquidez</td></tr>
-            </table>
+            <div class="tabelaExplica">
+                <table>
+                    <tr>
+                        <th></th>
+                        <th>Composição</th>
+                        <th>Sistema Emissor</th>
+                    </tr>
+                    <tr>
+                        <td>M1</td>
+                        <td>Papel moeda em poder do público (PMPP) + Depósitos à Vista</td>
+                        <td>Banco Central do Brasil e bancos comerciais</td>
+                    </tr>
+                    <tr>
+                        <td>M2</td>
+                        <td>M1 + Depósitos de Poupança + Títulos de bancos + Depósitos Especiais Remunerados</td>
+                        <td>Outros bancos e instituições financeiras não bancárias</td>
+                    </tr>
+                    <tr>
+                        <td>M3</td>
+                        <td>M2 + Cotas de fundos de investimento + Operações Compromissadas Selic</td>
+                        <td>Fundos de investimentos</td>
+                    </tr>
+                    <tr>
+                        <td>M4</td>
+                        <td>M3 + títulos públicos federais de alta liquidez</td>
+                        <td>Governo Federal</td>
+                    </tr>
+                </table>
+            </div>
 
             <h4>Base monetária</h4>
             <p>Composta por papel-moeda em circulação + reservas bancárias; também pode ser vista como PMPP + encaixes bancários (reservas + caixa dos bancos). Compulsórios são remunerados; reservas voluntárias podem aparecer além do obrigatório.</p>
+            <p><strong>BASE MONETÁRIA = PMC + RESERVAS COMPULSÓRIAS + RESERVAS VOLUNTÁRIAS</strong></p>
+            <p>Reserva compulsória = Dinheiro que os bancos são obrigados a depositar no Banco Central</p>
+            <p>Reserva compulsória = Dinheiro que os bancos depositam no Banco Central porque eles querem</p>
+            <p><strong>BASE MONETÁRIA = PMC + RESERVAS BANCÁRIAS</strong></p>
 
             <h4>Criação e destruição de moeda</h4>
             <p>Só ocorre quando a transação é entre o “público” e o setor bancário (BC + bancos que captam à vista). Ex.: transferir da poupança para a conta corrente cria moeda; aplicar em CDB destrói moeda; operações entre bancos entre si são neutras.</p>
