--- a/Desenvolvimento de Software/index.html
+++ b/Desenvolvimento de Software/index.html
@@ -3750,9 +3750,8 @@
                             <td class="linhaEditorCodigo">Python</td>
                         </tr>
                         <tr>
-                            <td class="umtab"><span class="amarelocodigo">def</span> minhafuncao():
-                                <br class="doistab">&nbsp;&nbsp;&nbsp;&nbsp;<span class="verdecodigo">print</span>(<span class="laranjacodigo">"Olá Mundo!"</span>)
-                            </td>
+                            <td class="umtab"><span class="amarelocodigo">def</span> minhafuncao():</td>
+                            <td class="doistab">&nbsp;&nbsp;&nbsp;&nbsp;<span class="verdecodigo">print</span>(<span class="laranjacodigo">"Olá Mundo!"</span>)</td>
                         </tr>
                     </tbody>
                 </table>
@@ -3786,11 +3785,11 @@
                             <td class="linhaEditorCodigo">Python</td>
                         </tr>
                         <tr>
-                            <td class="umtab"><span class="amarelocodigo">def</span> minhafuncao(<span class="laranjacodigo">nome</span>):
-                                <br class="doistab">&nbsp;&nbsp;&nbsp;&nbsp;<span class="verdecodigo">print</span>(<span class="laranjacodigo">"Prof. "</span> + <span class="laranjacodigo">nome</span>)
-                                <br class="trestab">minhafuncao(<span class="laranjacodigo">"Diego Carvalho"</span>)
-                                <br class="trestab">minhafuncao(<span class="laranjacodigo">"Raphael Lacerda"</span>)
-                                <br class="trestab">minhafuncao(<span class="laranjacodigo">"Paolla Ramos"</span>)
+                            <td class="umtab"><span class="amarelocodigo">def</span> minhafuncao(<span class="laranjacodigo">nome</span>):</td>
+                            <td class="doistab">&nbsp;&nbsp;&nbsp;&nbsp;<span class="verdecodigo">print</span>(<span class="laranjacodigo">"Prof. "</span> + <span class="laranjacodigo">nome</span>)</td>
+                            <td class="umtab">minhafuncao(<span class="laranjacodigo">"Diego Carvalho"</span>)</td>
+                            <td class="umtab">minhafuncao(<span class="laranjacodigo">"Raphael Lacerda"</span>)</td>
+                            <td class="umtab">minhafuncao(<span class="laranjacodigo">"Paolla Ramos"</span>)</td>
                             </td>
                         </tr>
                     </tbody>
@@ -3815,10 +3814,9 @@
                             <td class="linhaEditorCodigo">Python</td>
                         </tr>
                         <tr>
-                            <td class="umtab"><span class="amarelocodigo">def</span> minhafuncao (<span class="laranjacodigo">*</span>professores):
-                                <br class="doistab">&nbsp;&nbsp;&nbsp;&nbsp;<span class="verdecodigo">print</span>(<span class="laranjacodigo">professores[1]</span> + <span class="laranjacodigo">" é um professor de TI do Estratégia"</span>)
-                                <br class="trestab">minhafuncao(<span class="laranjacodigo">"Diego Carvalho"</span>, <span class="laranjacodigo">"Raphael Lacerda"</span>)
-                            </td>
+                            <td class="umtab"><span class="amarelocodigo">def</span> minhafuncao (<span class="laranjacodigo">*</span>professores):</td>
+                            <td class="doistab">&nbsp;&nbsp;&nbsp;&nbsp;<span class="verdecodigo">print</span>(<span class="laranjacodigo">professores[1]</span> + <span class="laranjacodigo">" é um professor de TI do Estratégia"</span>)</td>
+                            <td class="umtab">minhafuncao(<span class="laranjacodigo">"Diego Carvalho"</span>, <span class="laranjacodigo">"Raphael Lacerda"</span>)</td>
                         </tr>
                     </tbody>
                 </table>
@@ -3836,10 +3834,9 @@
                             <td class="linhaEditorCodigo">Python</td>
                         </tr>
                         <tr>
-                            <td class="umtab"><span class="amarelocodigo">def</span> minhafuncao (<span class="laranjacodigo">prof1</span>, <span class="laranjacodigo">prof2</span>, <span class="laranjacodigo">prof3</span>):
-                                <br class="doistab">&nbsp;&nbsp;&nbsp;&nbsp;<span class="verdecodigo">print</span>(<span class="laranjacodigo">prof1</span> + <span class="laranjacodigo">" é um professor de TI do Estratégia"</span>)
-                                <br class="trestab">minhafuncao(<span class="laranjacodigo">prof1 = "Diego Carvalho"</span>, <span class="laranjacodigo">prof2 = "Raphael Lacerda"</span>, <span class="laranjacodigo">prof3 = "Paolla Ramos"</span>)
-                            </td>
+                            <td class="umtab"><span class="amarelocodigo">def</span> minhafuncao (<span class="laranjacodigo">prof1</span>, <span class="laranjacodigo">prof2</span>, <span class="laranjacodigo">prof3</span>):</td>
+                            <td class="doistab">&nbsp;&nbsp;&nbsp;&nbsp;<span class="verdecodigo">print</span>(<span class="laranjacodigo">prof1</span> + <span class="laranjacodigo">" é um professor de TI do Estratégia"</span>)</td>
+                            <td class="umtab">minhafuncao(<span class="laranjacodigo">prof1 = "Diego Carvalho"</span>, <span class="laranjacodigo">prof2 = "Raphael Lacerda"</span>, <span class="laranjacodigo">prof3 = "Paolla Ramos"</span>)</td>
                         </tr>
                     </tbody>
                 </table>
@@ -3862,11 +3859,10 @@
                         </tr>
                         <tr>
                             <td class="umtab"><span class="amarelocodigo">def</span> minhafuncao(<span class="laranjacodigo">professores</span>):
-                                <br class="doistab">&nbsp;&nbsp;&nbsp;&nbsp;<span class="verdecodigo">for</span> <span class="laranjacodigo">x</span> <span class="rosacodigo">in</span> <span class="laranjacodigo">professores</span>:
-                                <br class="trestab">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="verdecodigo">print</span>(<span class="laranjacodigo">x</span>)
-                                <br class="trestab">listadeprofessores(<span class="laranjacodigo">"Diego Carvalho"</span>, <span class="laranjacodigo">"Raphael Lacerda"</span>, <span class="laranjacodigo">"Paolla Ramos"</span>)
-                                <br class="trestab">minhafuncao(<span class="laranjacodigo">listadeprofessores</span>)
-                            </td>
+                            <td class="doistab">&nbsp;&nbsp;&nbsp;&nbsp;<span class="verdecodigo">for</span> <span class="laranjacodigo">x</span> <span class="rosacodigo">in</span> <span class="laranjacodigo">professores</span>:</td>
+                            <td class="trestab">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="verdecodigo">print</span>(<span class="laranjacodigo">x</span>)</td>
+                            <td class="umtab">listadeprofessores(<span class="laranjacodigo">"Diego Carvalho"</span>, <span class="laranjacodigo">"Raphael Lacerda"</span>, <span class="laranjacodigo">"Paolla Ramos"</span>)</td>
+                            <td class="umtab">minhafuncao(<span class="laranjacodigo">listadeprofessores</span>)</td>
                         </tr>
                     </tbody>
                 </table>
@@ -3881,12 +3877,11 @@
                             <td class="linhaEditorCodigo">Python</td>
                         </tr>
                         <tr>
-                            <td class="umtab"><span class="amarelocodigo">def</span> funcao(<span class="laranjacodigo">x</span>):
-                                <br class="doistab">&nbsp;&nbsp;&nbsp;&nbsp;<span class="verdecodigo">return</span> <span class="laranjacodigo">5</span> * <span class="laranjacodigo">x</span>
-                                <br class="trestab"><span class="azulcodigo">print</span>(funcao(<span class="laranjacodigo">3</span>)) <span class="rosacodigo">#</span> imprime 15
-                                <br class="trestab"><span class="azulcodigo">print</span>(funcao(<span class="laranjacodigo">5</span>)) <span class="rosacodigo">#</span> imprime 25
-                                <br class="trestab"><span class="azulcodigo">print</span>(funcao(<span class="laranjacodigo">9</span>)) <span class="rosacodigo">#</span> imprime 45
-                            </td>
+                            <td class="umtab"><span class="amarelocodigo">def</span> funcao(<span class="laranjacodigo">x</span>):</td>
+                            <td class="doistab">&nbsp;&nbsp;&nbsp;&nbsp;<span class="verdecodigo">return</span> <span class="laranjacodigo">5</span> * <span class="laranjacodigo">x</span></td>
+                            <td class="umtab"><span class="azulcodigo">print</span>(funcao(<span class="laranjacodigo">3</span>)) <span class="rosacodigo">#</span> imprime 15</td>
+                            <td class="umtab"><span class="azulcodigo">print</span>(funcao(<span class="laranjacodigo">5</span>)) <span class="rosacodigo">#</span> imprime 25</td>
+                            <td class="umtab"><span class="azulcodigo">print</span>(funcao(<span class="laranjacodigo">9</span>)) <span class="rosacodigo">#</span> imprime 45</td>
                         </tr>
                     </tbody>
                 </table>
