--- a/Desenvolvimento de Software/index.html
+++ b/Desenvolvimento de Software/index.html
@@ -1823,11 +1823,89 @@
 
         </section>
 
+
+        <section>
+
+            <!-- AULA 03 - Java -->
+
+            <h2>Aula 03 – Java</h2>
+
+            <h3>O que é Java?</h3>
+
+            <p>O <strong>Java</strong> é a principal linguagem de programação e plataforma de desenvolvimento do mundo, utilizada para reduzir custos e prazos de desenvolvimento. É definida como uma linguagem <strong>orientada a objetos</strong>, <strong>multiplataforma</strong>, <strong>robusta</strong>, <strong>segura</strong> e <strong>distribuída</strong>. Seu diferencial é a portabilidade, permitindo que a aplicação seja compilada apenas uma vez para rodar em qualquer lugar que possua uma máquina virtual instalada.</p>
+
+            <h3>Como funciona o Java</h3>
+            <div>
+                <p>Ao contrário de outras linguagens que geram um código executável direto para o sistema operacional, o Java segue um fluxo diferente para garantir sua independência de plataforma:</p>
+                <ol>
+                    <li><strong>Código-Fonte:</strong> O programador escreve o código com extensão <code>.java</code>.</li>
+                    <li><strong>JavaC (Compilador):</strong> O código-fonte é enviado ao compilador <strong>JavaC</strong>.</li>
+                    <li><strong>Bytecode:</strong> O compilador gera um código binário intermediário chamado <strong>Bytecode</strong> (extensão <code>.class</code>).</li>
+                    <li><strong>JVM:</strong> O Bytecode é interpretado e executado pela <strong>Máquina Virtual Java</strong>.</li>
+                </ol>
+            </div>
+
+            <h3>Sopa de Letrinhas: Principais Siglas</h3>
+            <div class="tabelaExplica">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Sigla</th>
+                            <th>Nome Completo</th>
+                            <th>Funcionalidade</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td><strong>JVM</strong></td>
+                            <td>Java Virtual Machine</td>
+                            <td>Atua como uma camada de abstração entre o código e o hardware, interpretando o Bytecode para o sistema operacional específico.</td>
+                        </tr>
+                        <tr>
+                            <td><strong>JRE</strong></td>
+                            <td>Java Runtime Environment</td>
+                            <td>Ambiente necessário para o usuário final <strong>rodar</strong> aplicações Java. Contém a JVM e bibliotecas básicas.</td>
+                        </tr>
+                        <tr>
+                            <td><strong>JDK</strong></td>
+                            <td>Java Development Kit</td>
+                            <td>Kit completo para o <strong>programador</strong>. Inclui o JRE, a linguagem Java e ferramentas como o compilador JavaC e o Debugger.</td>
+                        </tr>
+                        <tr>
+                            <td><strong>JIT</strong></td>
+                            <td>Just-In-Time Compiler</td>
+                            <td>Componente da JVM que melhora a performance traduzindo partes frequentes do Bytecode diretamente para código de máquina em tempo real.</td>
+                        </tr>
+                        <tr>
+                            <td><strong>WORA</strong></td>
+                            <td>Write Once, Run Anywhere</td>
+                            <td>Conceito fundamental: "Escreva uma vez, execute em qualquer lugar", graças à portabilidade do Bytecode entre diferentes JVMs.</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <h3>Características e Edições Principais</h3>
+            <ul>
+                <li><strong>Garbage Collector:</strong> Processo automático de desalocação de memória que remove objetos não utilizados, evitando desperdícios.</li>
+                <li><strong>Java SE (Standard Edition):</strong> Plataforma central com as bibliotecas e APIs base para desenvolvimento desktop e applets.</li>
+                <li><strong>Java EE (Enterprise Edition):</strong> Voltada para aplicações corporativas de larga escala, servidores e web.</li>
+                <li><strong>Java ME (Micro Edition):</strong> Versão otimizada para dispositivos móveis e sistemas integrados com recursos limitados.</li>
+            </ul>
+
+            <div>
+                <strong>Analogia para facilitar:</strong> Imagine que o <strong>JDK</strong> é a sua caixa de ferramentas de construção, o <strong>JRE</strong> é o ambiente onde a casa será montada, e a <strong>JVM</strong> é o mestre de obras que traduz a planta (<strong>Bytecode</strong>) para os pedreiros (Hardware) de qualquer região do mundo.
+            </div>
+
+            
+
+        </section>
+
         <section>
 
             <!-- AULA 06 - Python-->
 
-            <h2>Aula 06 – Python</h1>
+            <h2>Aula 06 – Python</h2>
 
             <h3>O que é Python?</h3>
             <p>Python é uma linguagem de programação <strong>interpretada</strong>, <strong>de alto nível</strong>, <strong>dinâmica</strong> e <strong>multiplataforma</strong>. 
